-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size
-Added setting to disable boxes around lower and upper ZX Desktop Buttons


Fixed file previews on corrupted files: pzx, tap
Fixed rearranging windows and using total window height
Fixed Next ULA Scroll to use registers 0x26 and 0x27
Fixed Next tbblue port 123b behaviour: 48kb ram paging, shadow display, 3bit offset, read access
Fixed cpu-step behaviour the first time it's executed
Fixed cursor keys up/down on Jupiter Ace


Some other minor bugfixes and improvements



Version 9.2 - Cliff Hanger edition. 05 April 2021

Added SamRam Gerton Lunter interface emulation
Added new ZX-Uno Prism video mode
Added Dandanator storage button icon
Added alternate Jupiter ACE rom
Added another fourth easter egg ;)
Added read only setting for esxdos handler
Added setting to redefine joystick fire key
Added midi output instrument selector
Added Debug action to set PC register to zero
Added command line setting --copy-file-to-mmc to be able to copy files to a mmc image before starting ZEsarUX
Added ZRCP command realtape-open


Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added .snx snapshot support
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Improved CPC emulation: 
-Added video scanlines rendering (A.K.A. Real Video)
-Joystick emulation
-Stereo emulation

Improved File utilities Browser: